# Kaa-node

./: LICENSE.md  README.md
kaa-configuration/: CMakeLists.txt  kaa-configuration.html  kaa-configuration.js  main.js  package.json  test.js
kaa-configuration/src/: KaaConfigurationAddon.cpp
kaa-datacollection/: CMakeLists.txt  kaa-datacollection.html  kaa-datacollection.js  package.json  test.js
kaa-datacollection/src/: KaaDataCollection.cpp
kaa-notification/: CMakeLists.txt  kaa-notification.html  kaa-notification.js  main.js  package.json  test.js
kaa-notification/src/: NotificationAddon.cpp
